minor updates to Tester.java
outReady and errReady are always true? so I removed them